--- a/ui/src/app/views/settings/group/edit/group.edit.html
+++ b/ui/src/app/views/settings/group/edit/group.edit.html
@@ -139,7 +139,7 @@
             </div>
         </ng-template>
         <ng-template #loadGroup>
-            <div class="ui text active loader">{{ 'group_load_group' | translate }}</div>
+            <nz-spin nzTip="Loading group..."></nz-spin>
         </ng-template>
     </app-scrollview>
 </div>
