--- a/ui/src/app/views/settings/download/download.scss
+++ b/ui/src/app/views/settings/download/download.scss
@@ -1,8 +1,3 @@
-.table tbody tr {
-  &:last-child td {
-    border-bottom: none;
-  }
-  td:last-child {
-    border-right: none;
-  }
+nz-spin {
+  margin-top: 20px;
 }
