feat(ui): allow TTL definition in new consumer creation form
Signed-off-by: francois  samin <francois.samin@corp.ovh.com>

--- a/ui/src/app/views/settings/user/consumer-create-modal/consumer-create-modal.html
+++ b/ui/src/app/views/settings/user/consumer-create-modal/consumer-create-modal.html
@@ -27,6 +27,17 @@
                                     </nz-form-item>
                                 </nz-col>
                             </nz-row>
+                            <nz-row>
+                                <nz-col [nzSpan]="10">
+                                    <nz-form-item>
+                                        <nz-form-label>TTL (in days)</nz-form-label>
+                                        <nz-form-control>
+                                            <input nz-input type="number" name="duration" min="1" max="365"
+                                                   [(ngModel)]="newConsumer.validity_periods[0].duration">
+                                        </nz-form-control>
+                                    </nz-form-item>
+                                </nz-col>
+                            </nz-row>
                         </form>
                     </nz-collapse-panel>
                     <nz-collapse-panel [(nzActive)]="panels[formStepName.GROUPS]"
